# static-initialization-order-example

./: CMakeLists.txt  main.cpp
foo/: CMakeLists.txt  bar.cpp  foo.cpp
